--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,7 @@
 //Base
 @import 'base/_color.scss';
 @import 'base/typography.scss';
+@import 'base/base.scss';
 
 @import 'base/other.scss';
 @import 'base/reset.scss';
@@ -12,6 +13,7 @@
 @import 'pages/features.scss';
 @import 'pages/our-work.scss';
 @import 'pages/reviews.scss';
+@import 'pages/about.scss';
 
 
 //Components
